feat: add inventory service
