# internal/app/appserver/appserver.go
@@ -8,6 +8,7 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/tadilbek11kz/ePharma-backend/internal/app/config"
 	"github.com/tadilbek11kz/ePharma-backend/internal/app/handler/auth"
+	"github.com/tadilbek11kz/ePharma-backend/internal/app/handler/inventory"
 	"github.com/tadilbek11kz/ePharma-backend/internal/app/handler/pharmacy"
 	"github.com/tadilbek11kz/ePharma-backend/internal/app/handler/product"
 	"github.com/tadilbek11kz/ePharma-backend/internal/app/handler/swagger"
@@ -28,6 +29,7 @@ func RegisterHooks(
 	authHandler *auth.Handler,
 	pharmacyHandler *pharmacy.Handler,
 	productHandler *product.Handler,
+	inventoryHandler *inventory.Handler,
 	swaggerHandler *swagger.Handler,
 ) {
 	lifecycle.Append(
@@ -39,6 +41,7 @@ func RegisterHooks(
 				auth.RegisterRoutes(router, authHandler)
 				pharmacy.RegisterRoutes(router, pharmacyHandler)
 				product.RegisterRoutes(router, productHandler)
+				inventory.RegisterRoutes(router, inventoryHandler)
 				swagger.RegisterRoutes(router, swaggerHandler)
 
 				go func() {
